# cashu-kvac

./: .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md  deterministic_recovery.md  license  protocol_explanation.md  pyproject.toml  readme.md
.github/: release_drafter.yml
.github/workflows/: release-drafter.yml  rust.yml
benches/: misc_bench.rs  proofs_bench.rs  secp_bench.rs
benchmarks/: bench_native_secp.py  bench_proofs.py  bench_secp.py
crate/: kvac.rs
crate/src/: generators.rs
examples/: full_interaction.py
python/: pyproject.toml
python/benchmarks/: bench_native_secp.py  bench_secp.py
python/cffi_build/: build_libmerlin.py
python/examples/: full_interaction.py
python/src/: generators.py  models.py  secp.py  transcript.py
python/src/merlin/: merlin.py
src/: bulletproof.py  bulletproof.rs  errors.rs  generators.py  generators.rs  kvac.py  kvac.rs  lib.rs  models.py  models.rs  recovery.rs  secp.py  secp.rs  test.py  test_script.py  transcript.py  transcript.rs  wasm.rs
src/merlin/: __init__.py  extension_builder.py  merlin.py
tests/: test.py
