[package]
name = "cashu-kvac"
version = "0.1.0"
edition = "2021"

[lib]
path = "crate/src/lib.rs"

[dependencies]
bitcoin = { version= "0.32.2", features = ["base64", "serde", "rand", "rand-std"] }
hex = "0.4.3"
itertools = "0.13.0"
merlin = "3.0.0"
once_cell = "1.20.2"
rug = "1.26.1"
serde = "1.0.216"
serde_json = "1.0.134"
thiserror = "2.0.5"
