[package]
name = "cashu_kvac"
version = "0.0.2-alpha"
edition = "2021"
rust-version = "1.80.1"

[lib]
path = "src/lib.rs"

[dependencies]
bitcoin = { version= "0.32.2", features = ["base64", "serde", "rand", "rand-std"] }
hex = "0.4.3"
itertools = "0.13.0"
merlin = "3.0.0"
once_cell = "1.20.2"
rug = "1.26.1"
serde = "1.0.216"
serde_json = "1.0.134"
thiserror = "2.0.5"
