[package]
name = "cashu_kvac"
version = "0.0.4-alpha"
edition = "2021"
rust-version = "1.80.1"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = { version= "0.32.2", features = ["base64", "serde", "rand", "rand-std"] }
getrandom = { version = "0.2.3", features = ["js"]}
hex = "0.4.3"
itertools = "0.13.0"
merlin = "3.0.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
once_cell = "1.20.2"
serde = "1.0.216"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.134"
thiserror = "2.0.5"
wasm-bindgen = "0.2.100"

[profile.release]
lto = true
